Improvements in text and code

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -11,9 +11,9 @@
 \documentclass{tesisITAM}
 \usepackage[utf8]{inputenc}
 
-\title{Análisis de patrones de trabajo de programadores con datos de uso de herramientas}
-\author{Luis Carlos Cruz Díaz}
-\degree{Maestro en Ciencias en Computación}
+\title{ANÁLISIS DE PATRONES DE TRABAJO DE PROGRAMADORES CON DATOS DE USO DE HERRAMIENTAS}
+\author{LUIS CARLOS CRUZ DÍAZ}
+\degree{MAESTRO EN CIENCIAS EN COMPUTACIÓN}
 \advisor{DR. VÍCTOR MANUEL GONZÁLEZ Y GONZÁLEZ \\* DR. ROMAIN ROBBES}
 \year{2016}
 
@@ -36,7 +36,7 @@
 	\end{abstract}
 
 
-	\selectlanguage{spanish}
+	\selectlanguage{english}
 	\setcounter{page}{1}
 	\pagenumbering{roman}
 
@@ -52,13 +52,13 @@
 	% CONTENT
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-	\include{Chapters/introduction}
+	%\include{Chapters/introduction}
 
 	% \include{Chapters/relatedwork}
 
-	% \include{Chapters/method}
+	 \include{Chapters/method}
 
-	% \include{Chapters/results}
+	 \include{Chapters/results}
 
 	% \include{Chapters/conclusions}
 
