Refactoring and UDC

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -27,7 +27,7 @@
 	% ABSTRACT
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-	\begin{abstract}{spanish}
+	\begin{abstract}{english}
 		Este documento presenta una plantilla para usar en las tesis y tesinas del ITAM. Se provee de manera gratuita y sin ninguna responsabilidad bajo la licencia \emph{creative commons BY-SA 3.0}.
 	\end{abstract}
 
@@ -56,7 +56,7 @@
 
 	% \include{Chapters/relatedwork}
 
-	 \include{Chapters/method}
+	% \include{Chapters/method}
 
 	 \include{Chapters/results}
 
