--- a/docs/main.tex
+++ b/docs/main.tex
@@ -56,7 +56,7 @@
 
 	% \include{Chapters/relatedwork}
 
-	% \include{Chapters/method}
+	 \include{Chapters/method}
 
 	 \include{Chapters/results}
 
