Minor changes to the code and advances to the Chapter 3

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -10,6 +10,7 @@
 % 
 \documentclass{tesisITAM}
 \usepackage[utf8]{inputenc}
+\usepackage[numbers]{natbib}
 
 \title{ANÁLISIS DE PATRONES DE TRABAJO DE PROGRAMADORES CON DATOS DE USO DE HERRAMIENTAS}
 \author{LUIS CARLOS CRUZ DÍAZ}
@@ -77,15 +78,7 @@
 	%%%%%%%%% Referencias usando el sistema embedido %%%%%%%%%%%
 	% e.g. (Ejemplo tomado de https://en.wikibooks.org/wiki/LaTeX/Bibliography_Management)
 	%
-	% \begin{thebibliography}{9}
-	%
-	%	\bibitem{lamport94}
-    %			Leslie Lamport,
-    %			\emph{\LaTeX: a document preparation system},
-    %			Addison Wesley, Massachusetts,
-  	%			2nd edition,
-    % 			1994.
-    %
-	% \end{thebibliography}
+	 \bibliographystyle{chicago}
+	 \bibliography{mybib}
 
 \end{document}
