New graphs and Chapters 3 and 4 complete

--- a/docs/main.tex
+++ b/docs/main.tex
@@ -11,8 +11,9 @@
 \documentclass{tesisITAM}
 \usepackage[utf8]{inputenc}
 \usepackage[numbers]{natbib}
+\usepackage{array}
 
-\title{ANÁLISIS DE PATRONES DE TRABAJO DE PROGRAMADORES CON DATOS DE USO DE HERRAMIENTAS}
+\title{ANÁLISIS DE PATRONES DE TRABAJO DE PROGRAMADORES CON DATOS DE INTERACCIÓN}
 \author{LUIS CARLOS CRUZ DÍAZ}
 \degree{MAESTRO EN CIENCIAS EN COMPUTACIÓN}
 \advisor{DR. VÍCTOR MANUEL GONZÁLEZ Y GONZÁLEZ \\* DR. ROMAIN ROBBES}
@@ -53,9 +54,9 @@
 	% CONTENT
 	%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-	%\include{Chapters/introduction}
+	 \include{Chapters/introduction}
 
-	% \include{Chapters/relatedwork}
+	 \include{Chapters/relatedwork}
 
 	 \include{Chapters/method}
 
