--- a/docs/mybib.bib
+++ b/docs/mybib.bib
@@ -62,3 +62,273 @@ pages = {1--11},
 doi = {10.1145/1181775.1181777},
 masid = {2472813}
 }
+
+@article{CM02,
+  title={Mean shift: A robust approach toward feature space analysis},
+  author={Comaniciu, Dorin and Meer, Peter},
+  journal={IEEE Transactions on pattern analysis and machine intelligence},
+  volume={24},
+  number={5},
+  pages={603--619},
+  year={2002},
+  publisher={IEEE}
+}
+
+@article{FD07,
+  title={Clustering by passing messages between data points},
+  author={Frey, Brendan J and Dueck, Delbert},
+  journal={science},
+  volume={315},
+  number={5814},
+  pages={972--976},
+  year={2007},
+  publisher={American Association for the Advancement of Science}
+}
+
+@article{R87,
+  title={Silhouettes: a graphical aid to the interpretation and validation of cluster analysis},
+  author={Rousseeuw, Peter J},
+  journal={Journal of computational and applied mathematics},
+  volume={20},
+  pages={53--65},
+  year={1987},
+  publisher={Elsevier}
+}
+
+@article{AEH05,
+  title={An analysis of patterns of debugging among novice computer science students},
+  author={Ahmadzadeh, Marzieh and Elliman, Dave and Higgins, Colin},
+  journal={ACM SIGCSE Bulletin},
+  volume={37},
+  number={3},
+  pages={84--88},
+  year={2005},
+  publisher={ACM}
+}
+
+@article{MPB12,
+  title={How we refactor, and how we know it},
+  author={Murphy-Hill, Emerson and Parnin, Chris and Black, Andrew P},
+  journal={IEEE Transactions on Software Engineering},
+  volume={38},
+  number={1},
+  pages={5--18},
+  year={2012},
+  publisher={IEEE}
+}
+
+@article{PR11,
+  title={Resumption strategies for interrupted programming tasks},
+  author={Parnin, Chris and Rugaber, Spencer},
+  journal={Software Quality Journal},
+  volume={19},
+  number={1},
+  pages={5--34},
+  year={2011},
+  publisher={Springer}
+}
+
+@inproceedings{LVD06,
+  title={Maintaining mental models: a study of developer work habits},
+  author={LaToza, Thomas D and Venolia, Gina and DeLine, Robert},
+  booktitle={Proceedings of the 28th international conference on Software engineering},
+  pages={492--501},
+  year={2006},
+  organization={ACM}
+}
+
+@inproceedings{MMLK14,
+  title={Quantifying program comprehension with interaction data},
+  author={Minelli, Roberto and Mocci, Andrea and Lanza, Michele and Kobayashi, Takashi},
+  booktitle={2014 14th International Conference on Quality Software},
+  pages={276--285},
+  year={2014},
+  organization={IEEE}
+}
+
+@article{MKF06,
+  title={How are Java software developers using the Elipse IDE?},
+  author={Murphy, Gail C and Kersten, Mik and Findlater, Leah},
+  journal={IEEE software},
+  volume={23},
+  number={4},
+  pages={76--83},
+  year={2006},
+  publisher={IEEE}
+}
+
+@inproceedings{MKM08,
+  title={Debugging: the good, the bad, and the quirky--a qualitative analysis of novices' strategies},
+  author={Murphy, Laurie and Lewandowski, Gary and McCauley, Ren{\'e}e and Simon, Beth and Thomas, Lynda and Zander, Carol},
+  booktitle={ACM SIGCSE Bulletin},
+  volume={40},
+  number={1},
+  pages={163--167},
+  year={2008},
+  organization={ACM}
+}
+
+@article{AEH05,
+  title={An analysis of patterns of debugging among novice computer science students},
+  author={Ahmadzadeh, Marzieh and Elliman, Dave and Higgins, Colin},
+  journal={ACM SIGCSE Bulletin},
+  volume={37},
+  number={3},
+  pages={84--88},
+  year={2005},
+  publisher={ACM}
+}
+
+@article{C94,
+author = {Jacob Cohen},
+title = {The earth is round (p $<$ 0.5)},
+journal = {American Psychologist},
+volume = {49},
+number = {12},
+year = {1994},
+pages = {997-1003}
+}
+
+@inproceedings{IH07,
+  author    = {Shamsi T. Iqbal and
+               Eric Horvitz},
+  title     = {Disruption and recovery of computing tasks: field study, analysis,
+               and directions},
+  booktitle = {Proceedings of {CHI} 2007},
+  year      = {2007},
+  pages     = {677--686},
+  doi       = {10.1145/1240624.1240730},
+  timestamp = {Wed, 12 Nov 2014 17:15:28 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/chi/IqbalH07},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{SBV98,
+  title={Interrupts: just a minute never is},
+  author={Van Solingen, Rini and Berghout, Egon and Van Latum, Frank},
+  journal={IEEE software},
+  number={5},
+  pages={97--103},
+  year={1998},
+  publisher={IEEE}
+}
+
+@inproceedings{PD10,
+  author    = {Chris Parnin and
+               Robert DeLine},
+  title     = {Evaluating cues for resuming interrupted programming tasks},
+  booktitle = {Proceedings of {CHI} 2010},
+  year      = {2010},
+  pages     = {93--102},
+  doi       = {10.1145/1753326.1753342},
+  timestamp = {Sun, 09 Nov 2014 15:33:40 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/chi/ParninD10},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@article{AMP97,
+  author =	"Anja Struyf and Mia Hubert and Peter Rousseeuw",
+  title =	"Clustering in an Object-Oriented Environment",
+  journal =	"Journal of Statistical Software",
+  volume =	"1",
+  number =	"4",
+  pages =	"1--30",
+  day =  	"10",
+  month =	"2",
+  year = 	"1997",
+  CODEN =	"JSSOBK",
+  ISSN = 	"1548-7660",
+  bibdate =	"1997-02-10",
+  accepted =	"1997-02-10",
+  acknowledgement = "",
+  keywords =	"",
+  submitted =	"1996-04-10",
+}
+
+@article{RP87,
+  title={Silhouettes: a graphical aid to the interpretation and validation of cluster analysis},
+  author={Rousseeuw, Peter J},
+  journal={Journal of computational and applied mathematics},
+  volume={20},
+  pages={53--65},
+  year={1987},
+  publisher={Elsevier}
+}
+
+@article{KE05,
+author = {Eamonn J. Keogh},
+title = {Exact indexing of dynamic time warping},
+journal = {Knowledge and Information Systems},
+volume = {7},
+year = {2005},
+pages = {358--386},
+issue = {3},
+masid = {1718059}
+}
+
+@inproceedings{PR12,
+  title={Programmer information needs after memory failure},
+  author={Parnin, Chris and Rugaber, Spencer},
+  booktitle={Program Comprehension (ICPC), 2012 IEEE 20th International Conference on},
+  pages={123--132},
+  year={2012},
+  organization={IEEE}
+}
+
+@article{ABV12,
+  title={Information, technology, and information worker productivity},
+  author={Aral, Sinan and Brynjolfsson, Erik and Van Alstyne, Marshall},
+  journal={Information Systems Research},
+  volume={23},
+  number={3-part-2},
+  pages={849--867},
+  year={2012},
+  publisher={INFORMS}
+}
+
+@inproceedings{MGK08,
+  author    = {Gloria Mark and
+               Daniela Gudith and
+               Ulrich Klocke},
+  title     = {The cost of interrupted work: more speed and stress},
+  booktitle = {Proceedings of {CHI} 2008},
+  year      = {2008},
+  pages     = {107--110},
+  doi       = {10.1145/1357054.1357072},
+  timestamp = {Wed, 12 Nov 2014 17:11:21 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/chi/MarkGK08},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{CHW04,
+  author    = {Mary Czerwinski and
+               Eric Horvitz and
+               Susan Wilhite},
+  title     = {A diary study of task switching and interruptions},
+  booktitle = {Proceedings of {CHI} 2004},
+  year      = {2004},
+  pages     = {175--182},
+  doi       = {10.1145/985692.985715},
+  timestamp = {Wed, 12 Nov 2014 17:18:01 +0100},
+  biburl    = {http://dblp.uni-trier.de/rec/bib/conf/chi/CzerwinskiHW04},
+  bibsource = {dblp computer science bibliography, http://dblp.org}
+}
+
+@inproceedings{KM06,
+author = {Mik Kersten and Gail C. Murphy},
+title = {{Using task context to improve programmer productivity}},
+booktitle = {Proceedings of {FSE} 2006},
+year = {2006},
+pages = {1--11},
+doi = {10.1145/1181775.1181777},
+masid = {2472813}
+}
+
+@inproceedings{SRV15,
+  title={An empirical study of work fragmentation in software evolution tasks},
+  author={Sanchez, Heider and Robbes, Romain and Gonzalez, Victor M},
+  booktitle={2015 IEEE 22nd International Conference on Software Analysis, Evolution, and Reengineering (SANER)},
+  pages={251--260},
+  year={2015},
+  organization={IEEE}
+}
