--- a/docs/portada.tex
+++ b/docs/portada.tex
@@ -24,7 +24,7 @@
 		\vspace{5pt}
 		{\Large \theauthor} \\
 		\vfill
-		ASESOR \\
+		ASESORES \\
 		{\Large \theadvisor} \\
 		\vspace{5pt}
 		\begin{tabular}{lcr}
