--- a/docs/portada.tex
+++ b/docs/portada.tex
@@ -10,25 +10,28 @@
 		\vspace{25pt}
 		\includegraphics[width=10cm,height=2.8cm]{LOGO_ITAM.jpg}\\
 		\vspace{25pt}
-		{\huge \thetitle}\\
-		\vspace{5pt}
-		% {\large \thesubtitle}\\
-		\vspace{20 pt}
-		{\Large \thethesis } \\
-		\vspace{5pt}
-		QUE PARA OBTENER EL TÍTULO DE \\
-		\vspace{5pt}
-		{\Large \thedegree} \\
-		\vspace{5pt}
-		PRESENTA \\
-		\vspace{5pt}
-		{\Large \theauthor} \\
-		\vfill
-		ASESORES \\
-		{\Large \theadvisor} \\
-		\vspace{5pt}
-		\begin{tabular}{lcr}
-			MÉXICO, D.F. & \hspace{60pt} & \theyear
-		\end{tabular}
+		\begingroup
+			\fontsize{14pt}{12pt}\selectfont
+			{\huge \thetitle}\\
+			\vspace{5pt}
+			% {\large \thesubtitle}\\
+			\vspace{20 pt}
+			{\Large \thethesis } \\
+			\vspace{5pt}
+			QUE PARA OBTENER EL GRADO DE \\
+			\vspace{5pt}
+			{\Large \thedegree} \\
+			\vspace{5pt}
+			PRESENTA \\
+			\vspace{5pt}
+			{\Large \theauthor} \\
+			\vfill
+			ASESORES \\
+			{\Large \theadvisor} \\
+			\vspace{5pt}
+			\begin{tabular}{lcr}
+				MÉXICO, D.F. & \hspace{60pt} & \theyear
+			\end{tabular}
+		\endgroup
 	\end{center}
 \end{titlepage}
