--- a/docs/mybib.bib
+++ b/docs/mybib.bib
@@ -332,3 +332,270 @@ masid = {2472813}
   year={2015},
   organization={IEEE}
 }
+
+@inproceedings{MGH05,
+  title={No task left behind?: examining the nature of fragmented work},
+  author={Mark, Gloria and Gonzalez, Victor M and Harris, Justin},
+  booktitle={Proceedings of the SIGCHI conference on Human factors in computing systems},
+  pages={321--330},
+  year={2005},
+  organization={ACM}
+}
+
+@book{T99,
+  title={On Fragmentation of Working Time: A Study of Causes and Effects of Work Interruptions},
+  author={T{\'e}tard, Franck},
+  year={1999},
+  publisher={{\AA}bo Akademi University}
+}
+
+@article{BJE05,
+  title={Optimising the email communication environment},
+  author={Burgess, A and Jackson, Thomas W and Edwards, J},
+  journal={Managing modern organizations with information technology: IRMA 2005 proceedings},
+  year={2005}
+}
+
+@article{CCH01,
+  title={Notification, disruption, and memory: Effects of messaging interruptions on memory and performance},
+  author={Cutrell, Edward and Czerwinski, Mary and Horvitz, Eric},
+  year={2001},
+  publisher={Citeseer}
+}
+
+@article{LR05,
+  title={Meetings and More Meetings: The Relationship Between Meeting Load and the Daily Well-Being of Employees.},
+  author={Luong, Alexandra and Rogelberg, Steven G},
+  journal={Group Dynamics: Theory, Research, and Practice},
+  volume={9},
+  number={1},
+  pages={58},
+  year={2005},
+  publisher={Educational Publishing Foundation}
+}
+
+@article{H04,
+  title={Mining software repositories to assist developers and support managers},
+  author={Hassan, Ahmed},
+  year={2004},
+  publisher={University of Waterloo}
+}
+
+@inproceedings{H08,
+  title={The road ahead for mining software repositories},
+  author={Hassan, Ahmed E},
+  booktitle={Frontiers of Software Maintenance, 2008. FoSM 2008.},
+  pages={48--57},
+  year={2008},
+  organization={IEEE}
+}
+
+@inproceedings{HX10,
+  title={Software intelligence: the future of mining software engineering data},
+  author={Hassan, Ahmed E and Xie, Tao},
+  booktitle={Proceedings of the FSE/SDP workshop on Future of software engineering research},
+  pages={161--166},
+  year={2010},
+  organization={ACM}
+}
+
+@inproceedings{KDZ12,
+  title={Do faster releases improve software quality? an empirical case study of mozilla firefox},
+  author={Khomh, Foutse and Dhaliwal, Tejinder and Zou, Ying and Adams, Bram},
+  booktitle={Mining Software Repositories (MSR), 2012 9th IEEE Working Conference on},
+  pages={179--188},
+  year={2012},
+  organization={IEEE}
+}
+
+@inproceedings{NBZ06,
+  title={Mining metrics to predict component failures},
+  author={Nagappan, Nachiappan and Ball, Thomas and Zeller, Andreas},
+  booktitle={Proceedings of the 28th international conference on Software engineering},
+  pages={452--461},
+  year={2006},
+  organization={ACM}
+}
+
+@article{FPC14,
+  title={Data stream mining for predicting software build outcomes using source code metrics},
+  author={Finlay, Jacqui and Pears, Russel and Connor, Andy M},
+  journal={Information and Software Technology},
+  volume={56},
+  number={2},
+  pages={183--198},
+  year={2014},
+  publisher={Elsevier}
+}
+
+@inproceedings{ZN08,
+  title={Predicting defects using network analysis on dependency graphs},
+  author={Zimmermann, Thomas and Nagappan, Nachiappan},
+  booktitle={Proceedings of the 30th international conference on Software engineering},
+  pages={531--540},
+  year={2008},
+  organization={ACM}
+}
+
+@inproceedings{MWS08,
+  title={Predicting failures with developer networks and social network analysis},
+  author={Meneely, Andrew and Williams, Laurie and Snipes, Will and Osborne, Jason},
+  booktitle={Proceedings of the 16th ACM SIGSOFT International Symposium on Foundations of software engineering},
+  pages={13--23},
+  year={2008},
+  organization={ACM}
+}
+
+@inproceedings{CD10,
+  title={Are you having difficulty?},
+  author={Carter, Jason and Dewan, Prasun},
+  booktitle={Proceedings of the 2010 ACM conference on Computer supported cooperative work},
+  pages={211--214},
+  year={2010},
+  organization={ACM}
+}
+
+@inproceedings{FMH07,
+  title={Does a programmer's activity indicate knowledge of code?},
+  author={Fritz, Thomas and Murphy, Gail C and Hill, Emily},
+  booktitle={Proceedings of the the 6th joint meeting of the European software engineering conference and the ACM SIGSOFT symposium on The foundations of software engineering},
+  pages={341--350},
+  year={2007},
+  organization={ACM}
+}
+
+@inproceedings{MGH05,
+  title={No task left behind?: examining the nature of fragmented work},
+  author={Mark, Gloria and Gonzalez, Victor M and Harris, Justin},
+  booktitle={Proceedings of the SIGCHI conference on Human factors in computing systems},
+  pages={321--330},
+  year={2005},
+  organization={ACM}
+}
+
+@article{EC00,
+  title={The effects of interruptions in work activity: Field and laboratory results},
+  author={Eyrolle, H{\'e}l{\`e}ne and Cellier, Jean-Marie},
+  journal={Applied ergonomics},
+  volume={31},
+  number={5},
+  pages={537--543},
+  year={2000},
+  publisher={Elsevier}
+}
+
+@techreport{AT04,
+  title={Task interruption: Resumption lag and the role of cues},
+  author={Altmann, Erik M and Trafton, J Gregory},
+  year={2004},
+  institution={DTIC Document}
+}
+
+@inproceedings{BKC01,
+  title={The effects of interruptions on task performance, annoyance, and anxiety in the user interface},
+  author={Bailey, Brian P and Konstan, Joseph A and Carlis, John V},
+  booktitle={Proceedings of INTERACT},
+  volume={1},
+  pages={593--601},
+  year={2001}
+}
+
+@article{BL96,
+  title={Effects of interruptions on the computerised clerical task performance},
+  author={Burmistrov, Ivan and Leonova, Anna},
+  journal={Human-computer interaction: Human aspects of business computing. Proceedings of EWHCI},
+  volume={96},
+  pages={21--29},
+  year={1996}
+}
+
+@inproceedings{CDT07,
+  title={Does the Difficulty of an Interruption Affect our Ability to Resume?},
+  author={Cades, David M and Davis, Deborah A Boehm and Trafton, J Gregory and Monk, Christopher A},
+  booktitle={Proceedings of the Human Factors and Ergonomics Society Annual Meeting},
+  volume={51},
+  number={4},
+  pages={234--238},
+  year={2007},
+  organization={SAGE Publications}
+}
+
+@inproceedings{BGZ15,
+  title={How (much) do developers test?},
+  author={Beller, Moritz and Gousios, Georgios and Zaidman, Andy},
+  booktitle={2015 IEEE/ACM 37th IEEE International Conference on Software Engineering},
+  volume={2},
+  pages={559--562},
+  year={2015},
+  organization={IEEE}
+}
+
+@inproceedings{RTK12,
+  title={How do professional developers comprehend software?},
+  author={Roehm, Tobias and Tiarks, Rebecca and Koschke, Rainer and Maalej, Walid},
+  booktitle={Proceedings of the 34th International Conference on Software Engineering},
+  pages={255--265},
+  year={2012},
+  organization={IEEE Press}
+}
+
+@article{FH83,
+  title={Application program maintenance study: Report to our respondents},
+  author={Fjeldstad, Richard K and Hamlen, William T},
+  journal={Proceedings Guide},
+  volume={48},
+  year={1983}
+}
+
+@article{R95,
+  title={Program comprehension},
+  author={Rugaber, Spencer},
+  journal={Encyclopedia of Computer Science and Technology},
+  volume={35},
+  number={20},
+  pages={341--368},
+  year={1995}
+}
+
+@phdthesis{B14,
+  title={Visualizing Developers Interactions with the IDE},
+  author={Baracchi, Lorenzo},
+  year={2014},
+  school={Universit{\`a} della Svizzera Italiana}
+}
+
+@inproceedings{SLV10,
+  title={An examination of software engineering work practices},
+  author={Singer, Janice and Lethbridge, Timothy and Vinson, Norman and Anquetil, Nicolas},
+  booktitle={CASCON First Decade High Impact Papers},
+  pages={174--188},
+  year={2010},
+  organization={IBM Corp.}
+}
+
+@article{P14,
+  title={Supporting interrupted programming tasks with memory-based aids},
+  author={Parnin, Christopher Joseph},
+  year={2014},
+  publisher={Georgia Institute of Technology}
+}
+
+@inproceedings{AFQ15,
+  title={A field study on fostering structural navigation with prodet},
+  author={Augustine, Vinay and Francis, Patrick and Qu, Xiao and Shepherd, David and Snipes, Will and Br{\"a}unlich, Christoph and Fritz, Thomas},
+  booktitle={Proceedings of the 37th International Conference on Software Engineering-Volume 2},
+  pages={229--238},
+  year={2015},
+  organization={IEEE Press}
+}
+
+@article{KMC06,
+  title={An exploratory study of how developers seek, relate, and collect relevant information during software maintenance tasks},
+  author={Ko, Andrew J and Myers, Brad A and Coblenz, Michael J and Aung, Htet Htet},
+  journal={IEEE Transactions on software engineering},
+  volume={32},
+  number={12},
+  pages={971--987},
+  year={2006},
+  publisher={IEEE}
+}
