--- a/docs/mybib.bib
+++ b/docs/mybib.bib
@@ -599,3 +599,14 @@ masid = {2472813}
   year={2006},
   publisher={IEEE}
 }
+
+@article{ZZW05,
+  title={Mining version histories to guide software changes},
+  author={Zimmermann, Thomas and Zeller, Andreas and Weissgerber, Peter and Diehl, Stephan},
+  journal={IEEE Transactions on Software Engineering},
+  volume={31},
+  number={6},
+  pages={429--445},
+  year={2005},
+  publisher={IEEE}
+}
